src/objects/Apttus_Revenue2__Agreement_Fee_Product__c.object
<CustomObject>
    <description>Holds the many to many relationships between agreement fee and agreement product objects</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement fee</description>
        <inlineHelpText>Associated agreement fee</inlineHelpText>
        <label>Agreement Fee</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Agreement Fee-Product</relationshipLabel>
        <relationshipName>Agreement_Fee_Product_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement product</description>
        <inlineHelpText>Associated agreement product</inlineHelpText>
        <label>Agreement Product</label>
        <referenceTo>Apttus_Revenue2__Agreement_Product__c</referenceTo>
        <relationshipLabel>Agreement Fee-Product</relationshipLabel>
        <relationshipName>Agreement_Fee_Product_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Product_Name__c</fullName>
        <description>Associated product name</description>
        <formula>Apttus_Revenue2__Agreement_Product__r.Apttus_Revenue2__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Associated product name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Agreement Fee-Product</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Fee-Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Fee-Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>